--- a/index.html
+++ b/index.html
@@ -12,7 +12,30 @@
 <body>
 
     <div class="conteudo">
-        <p>Parte principal</p>
+
+        <div id="descricao-home">
+
+            <p> Olá, meu nome é Guilherme Figueiredo, eu tenho 17 anos e atualmente estou
+                indo para o segundo período do curso de Ciência da Computação na UFV.
+                Aqui você não vai conseguir conhecer o mundo todo, mas vai poder conhecer melhor o meu mundo.</p>
+
+        </div> 
+
+        <div></div>
+
+        <div>
+
+            <ul id="barra-horizontal">
+
+                <li class="primeiro"><a href="desenhos.html">Arte</a></li>
+                <li><a href="">Musica</a></li>
+                <li><a href="">Religiao</a></li>
+                <li class="ultimo"><a href="">Vida Acadêmica</a></li>
+
+            </ul>
+
+        </div>
+
     </div>
 
     <div class="imagem">
@@ -43,8 +66,34 @@
         <p>Quarta Imagem</p>
     </div>
 
-    <div class="conteudo">
-        <p>Arte</p>
+    <div class="conteudo arte">
+
+        <div id="livros" ><!--inicio Arte-->
+
+            <p> Desde quando eu era pequeno, eu amo desenhar. Minha vó tinha um caderno 
+                e alguns lapis que ela deixava separado pra mim e eu ficada desenhando os 
+                móveis e jarros de flor da casa dela quando eu ia lá.
+            </p>
+
+            <p> Quando eu fui crescendo eu passei a desenhar os personagens desenhos e filmes
+                que eu gostava. Eu tive algumas "fases" de desenho, do jeito como eu gostava de
+                desenhar, mas eu sempre gostei de lápis e lapís de cor. Já pensei em tentar aquarela
+                mas gosto do controle que o lapís dá sobre a folha. 
+            </p>
+
+            <p> Por fim, eu adorava passar HORAS desenhando. Eu simplesmente colocava o meu fone com uma 
+                playlist que eu gostava e esquecia que existia o mundo real a minha volta. Hoje em dia, infelizmete eu 
+                desenho muito raramente devido ao fato que os estudos e afazeres não me permitem mais passar entre 
+                6 e 9 horas direto em um desenho. Mas mesmo assim a arte ainda tem um lugar especial em meu
+                coração. 
+            </p>
+
+        </div><!--Final Arte-->
+
+        <div id="desenho">
+            
+        </div>
+
     </div>
 
     <div class="imagem">
