paralax e um pouco de melhora na ideia do degrade

--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
         <p>Lazer</p>
     </div>
 
-    <div class="imagem">
+    <div class="imagem3">
         <p>Terceira Imagem</p>
     </div>
 
-    <div class="conteudo">
+    <div id="musica" class="conteudo">
         <p>Música</p>
     </div>
 
@@ -66,7 +66,7 @@
         <p>Quarta Imagem</p>
     </div>
 
-    <div class="conteudo arte">
+    <div id="arte" class="conteudo arte">
 
         <div id="livros" ><!--inicio Arte-->
 
@@ -96,12 +96,35 @@
 
     </div>
 
-    <div class="imagem">
+    <div class="imagem5">
         <p>Quinta Imagem</p>
     </div>
 
-    <div class="conteudo">
-        <p>Religiosidade</p>
+    <div id="religiao">
+        <div id="livros">
+
+            <p>Minha família sempre foi muito religiosa, então eu sempre estive muito presente
+                no ambiente religioso. Eu vou a missa todos os domingos, já participei de coroações
+                quando eu era pequeno, e eu ia no grupo de oração as sextas que meu mãe cordenava
+                e ao "terço dos homens" com meu pai e meu irmão as terças-ferias.
+            </p>
+
+            <p>
+                Eu também fui o primeiro coroinha da minha cidade dos tempos atuais. Por muito tempo não havia ninguém,
+                ai quando abriu um curso de preparação eu fui o primeiro e único a participar pelas primeiras três semanas,
+                até que depois apareceu mais 3 meninas e a gente serviu junto por uns 2 a 3 anos. Depois 
+                abriu mais um curso em que muita gente entrou e na missa de formação desses coroinhas, eu e minhas
+                amigas passamos a ser acólitos. Eu servia de acólito até o começo desse ano, no começo da pandemia eu tinha 
+                parado mas depois voltei. Agora eu parei de vez porque me mudei para viçosa, então passei minha vestimenta 
+                para novos acólitos. 
+            </p>
+
+            <p>Além disso, eu também ajudei na criação de um coral dos jovens na igreja. Ele começou porque não 
+                havia ninguém para tocar no grupo de oração mas acabou crescendo e passou a tocar também 
+                no grupo de jovens e na missa. 
+            </p>
+
+        </div>
     </div>
     
 </body>
