botao fotos principais

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
             <div id="imagem-academica">
 
                 <div class="conteudo-titulo">
-                    <span class="titulo">Vida<br> Acadêmica</span>
+                    
+                    <span class="titulo">Vida Acadêmica</span>
+                    
                 </div>
 
             </div>
@@ -82,6 +84,7 @@
                 <div class="conteudo-titulo">
                     <span class="titulo">Lazer</span>
                 </div>
+
             </div>
         </div>
 
@@ -101,6 +104,10 @@
                     e animação. Eu considero filmes e séries como uma versão mais leve de livros, mas que em muitos casos é bom, pois em um final
                     de semana a noite por exemplo ou quando estou cansado, eu prefiro ver um filme ou série por ser um conteúdo mais fácil e rápido
                     de ser consumido e mais tranquilo do que estar lendo sobre mundos épicos de fantasia. 
+                </p>
+
+                <p> Eu não sou uma pessoa muito de festas, mas adoro sair e passar tempo com meus amigos. Ir para um rodízio de pizzas ou fazer um 
+                    encontrinho na casa de um dos amigos para bater papo, jogar uno e cantar até não poder mais no karaoke é o meu role ideial. 
                 </p>
 
             </div>
