layout liquido e revisao dos textos

--- a/index.html
+++ b/index.html
@@ -58,19 +58,22 @@
 
             <div id="box-academico" >
 
-                <p> Eu sempre fui uma pessoa estudiosa e que estava entre os dois melhores alunos da turma. No primeiro ano do ensino fundamental
-                    eu e meu irmão fomos adiantados porque éramos os únicos alunos da sala que já sabiam ler e escrever com facilidade. Esse é o motivo
-                    pelo qual eu vou cursar o segundo período da faculdade antes de completar 18 anos de idade.
+                <p> 
+                    Eu sempre fui uma pessoa estudiosa e que estava entre os dois melhores alunos da turma. No primeiro ano do ensino fundamental
+                    eu e meu irmão fomos adiantados para o segundo ano porque éramos os únicos alunos da sala que já sabiam ler e escrever com facilidade.
+                    Esse é o motivo pelo qual eu vou cursar o segundo período da faculdade antes de completar 18 anos de idade.
                 </p>
 
-                <p> Eu também sempre me dei muito bem com todos os professores e matérias e sou bom principalmente na área da matématica. Todos os anos
-                    que eu fiz a OBMEP(olimpíada de matemática) eu passei para a segunda fase e ganhei certificado de honra, e eu também fechei a prova
-                    de matemática do SIMAVE, aplicada no primeiro ano do ensino médio e é uma prova de 26 questões com intuito de avaliar o nível de
+                <p> 
+                    Eu também sempre me dei muito bem com todos os professores e matérias e sou bom principalmente na área da matématica. Todos os anos
+                    que eu fiz a OBMEP(olimpíada de matemática) eu passei para a segunda fase e ganhei certificado de honra, e também fechei a prova
+                    de matemática do SIMAVE, aplicada no primeiro ano do ensino médio, que é uma prova de 26 questões com intuito de avaliar o nível de
                     conhecimento dos alunos em relação aos tópicos aprendidos durante o ensino fundamental e começo do médio.
                 </p>
 
-                <p>  Atualmente eu estou indo para o segundo período do curso de Ciência da Computação na UFV e fui a aluno da sala com maior nota do 
-                    primeiro período, tendo tirado um CR(coeficiente de rendimento) de 95.2 pontos em 100. 
+                <p> Atualmente eu estou cursando Ciência da Computação na UFV e sou apaixonado por qualquer coisa que envolve programação. No 
+                    primeiro período eu fui a aluno da sala com maior nota, tendo tirado um CR(coeficiente de rendimento) de 95.2 pontos em 100, 
+                    e tenho como objetivo manter o meu CR bem alto por todo o curso.
                 </p>
 
             </div>
@@ -95,22 +98,23 @@
 
             <div id="box-lazer" >
 
-                <p> Eu sou uma pessoa muito de casa, então a maior parte das meus hobbies são mais "quietos". Primeiramente, 
-                    o meu passatempo favorito é ler. Eu amo ler e estou sempre lendo algum livro, meus generos favoritos são fantasia
+                <p> 
+                    O meu passatempo favorito é ler, eu amo ler e estou com um livro ou kindle, meus gêneros favoritos são fantasia
                     e ficção-científica e eu leio cerca de uns 50-60 livros por ano. Eu participo de um discord de leituras da booktuber
                     Tamirez(canal Resenhando Sonhos) onde eu fiz boas amizades. A gente faz leitura conjunta e comenta dos livros que estamos
-                    lendo e coisas aleatórias da vida. Eu gosto muito de ler porque acho que na corria e confusão do dia a dia, nada consegue
+                    lendo e coisas aleatórias da vida.<br> Eu gosto muito de ler porque acho que na corria e confusão do dia a dia, nada consegue
                     me transportar para outra realidade e me deixar tão imerso a ponto de esquecer a realidade ao meu redor como um bom livro.
                 </p>
 
-                <p> Eu também sou cinéfilo. Sempre estou de olho nos últimos lançamentos de filmes e séries e meus gêneros favoritos são sci-fi 
+                <p> Eu também sou meio cinéfilo, sempre estou de olho nos últimos lançamentos de filmes e séries e meus gêneros favoritos são sci-fi 
                     e animação. Eu considero filmes e séries como uma versão mais leve de livros, mas que em muitos casos é bom, pois em um final
                     de semana a noite por exemplo ou quando estou cansado, eu prefiro ver um filme ou série por ser um conteúdo mais fácil e rápido
                     de ser consumido e mais tranquilo do que estar lendo sobre mundos épicos de fantasia. 
                 </p>
 
-                <p> Eu não sou uma pessoa muito de festas, mas adoro sair e passar tempo com meus amigos. Ir para um rodízio de pizzas ou fazer um 
-                    encontrinho na casa de um dos amigos para bater papo, jogar uno e cantar até não poder mais no karaoke é o meu role ideial. 
+                <p> Por fim, eu não sou uma pessoa muito de festas, mas adoro sair e passar tempo com meus amigos. Ir para um rodízio de pizzas ou fazer um 
+                    encontrinho na casa de um dos amigos para bater papo, jogar uno e cantar no karaoke é o meu role ideial. Gosto de encontrinhos mais
+                    pessois porque gosto da mistura entre papos aleatórios e assuntos mais profundos que só esse tipo de encontro proporciona.
                 </p>
 
             </div>
@@ -136,22 +140,25 @@
 
             <div id="box-musica" >
 
-                <p> Eu sou apaixonado por tudo que envolve música, desde cantar a tocar violão e dançar. Música é o meu lugar
+                <p> 
+                    Eu sou apaixonado por tudo que envolve música, desde cantar a tocar violão e dançar. A música é o meu lugar
                     de conforto, quando eu estou feliz eu gosto de cantar pra expressar minha felicidade e quando eu estou
                     triste eu canto para me animar. Se você me encontrar andando sozinho pela rua eu provavelmente vou estar 
                     cantarolando alguma música no fundo da minha cabeça. 
                 </p>
 
-                <p> Eu acho que a música consegue colocar pra fora e expressar aquilo que está dentro de nós. O momento em que eu
-                    estou cantando é quando eu esqueço de tudo ao meu redor e simplesmente sinto a música. Por eu ter crescido em
-                    um sítio que não tem vizinhos, eu aproveitava quando ficava sozinho em casa pra cantar até falar chega sem vergonha
-                    de nada por não ter ninguém a minha volta.
+                <p> 
+                    Ademais, eu já fiz apresentações tocando e cantando na escola(a foto ao lado é de um dia de gincana 
+                    da escola) e eu participava do coral de jovens da minha igreja em que eu comecei apenas tocando violão
+                    mas depois comecei a cantar junto como uma forma de ser a voz masculina do coral. Eu gosto de arrumar a
+                    casa escutando musica e dançando enquanto arrumo as coisas, e meu gosto musical é pop internacional e
+                    sofrência ao som de Adele.
                 </p>
 
-                <p> Eu já fiz apresentações tocando e cantando na escola e eu participava do coral de jovens da minha igreja em que eu
-                    comecei apenas tocando violão mas depois comecei a cantar junto também como uma forma de ser a voz masculina do coral. 
-                    Eu gosto de arrumar a casa escutando musica e dançando pela casa. Eu gosto de escutar musica pop internacional e de 
-                    sofrer um pouqinho também ao som de Adele.
+                <p> 
+                    Por fim, eu acho que a música consegue me trazer uma felicidade e leveza muito grande por isso que todo dia em algum 
+                    momento eu vou estar escutando musica, se for em um dia muito corrido, pelo menos tem que ter um lo-fi para acompanhar 
+                    as minhas atividades. 
                 </p>
 
             </div>
@@ -177,22 +184,25 @@
 
             <div id="box-arte" >
 
-                <p> Desde quando eu era pequeno, eu amo desenhar. Minha vó tinha um caderno 
-                    e alguns lapis que ela deixava separado pra mim e eu ficada desenhando os 
-                    móveis e jarros de flor da casa dela quando eu ia lá.
+                <p> 
+                    Desde quando eu era pequeno, eu gostava de desenhar. Minha vó tinha um caderno 
+                    e alguns lapis que ela deixava guardado pra mim e quando eu ia lá eu ficada
+                    desenhando os móveis e jarros de flor da casa dela .
                 </p>
 
-                <p> Quando eu fui crescendo eu passei a desenhar os personagens desenhos e filmes
-                    que eu gostava. Eu tive algumas "fases" de desenho, do jeito como eu gostava de
-                    desenhar, mas eu sempre gostei de lápis e lapís de cor. Já pensei em tentar aquarela
-                    mas gosto do controle que o lapís dá sobre a folha. 
+                <p> 
+                    Quando eu fui crescendo eu passei a desenhar os personagens de desenhos e filmes
+                    que eu gostava, como Steven Universe e Como Treinar o seu Dragão. Eu tive algumas
+                    "fases" de desenho, do jeito e estilo que eu usava pra desenhar, mas eu sempre
+                    gostei de usar lápis e lapís de cor. Já pensei em tentar aquarela mas gosto do
+                    controle que o lapís tem sobre a folha e pelo fato de não fazer tanta bagunça kkkk. 
                 </p>
 
-                <p> Por fim, eu adorava passar HORAS desenhando. Eu simplesmente colocava o meu fone com uma 
-                    playlist que eu gostava e esquecia que existia o mundo real a minha volta. Hoje em dia, infelizmete eu 
-                    desenho muito raramente devido ao fato que os estudos e afazeres não me permitem mais passar entre 
-                    6 e 9 horas direto em um desenho. Mas mesmo assim a arte ainda tem um lugar especial em meu
-                    coração. 
+                <p>
+                    Eu amava passar horas desenhando. Eu simplesmente colocava o meu fone com uma playlist de músicas
+                    e passava a tarde inteira imerso em um desenho. Hoje em dia, infelizmete eu desenho muito raramente
+                    devido ao fato que os estudos e afazeres não me permitem mais passar entre 6 e 9 horas direto em um
+                    desenho. Mas mesmo assim a arte ainda tem um lugar especial em meu coração. 
                 </p>
 
             </div>
@@ -220,23 +230,25 @@
 
             <div id="box-religiao">
 
-                <p>Minha família sempre foi muito religiosa, então eu sempre estive muito presente
+                <p>
+                    Minha família sempre foi muito religiosa, então eu sempre estive muito presente
                     no ambiente religioso. Eu vou a missa todos os domingos, já participei de coroações
-                    quando eu era pequeno, e eu ia no grupo de oração as sextas que meu mãe cordenava
-                    e ao "terço dos homens" com meu pai e meu irmão as terças-ferias.
+                    quando eu era pequeno, eu faço leituras nas missas e ia no grupo de oração as sextas
+                    que minha mãe cordenava e ao "terço dos homens" com meu pai e meu irmão as terças-ferias.
                 </p>
 
                 <p>
                     Eu também fui o primeiro coroinha da minha cidade dos tempos atuais. Por muito tempo não havia ninguém,
                     ai quando abriu um curso de preparação eu fui o primeiro e único a participar pelas primeiras três semanas,
-                    até que depois apareceu mais 3 meninas e a gente serviu junto por uns 2 a 3 anos. Depois 
-                    abriu mais um curso em que muita gente entrou e na missa de formação desses coroinhas, eu e minhas
-                    amigas passamos a ser acólitos. Eu servia de acólito até o começo desse ano, no começo da pandemia eu tinha 
-                    parado mas depois voltei. Agora eu parei de vez porque me mudei para viçosa, então passei minha vestimenta 
-                    para novos acólitos. 
+                    até que depois apareceu mais 3 meninas e a gente serviu junto por uns 2 a 3 anos e viramos bons amigos. Depois disso, 
+                    abriu mais um curso de preparação em que muita gente entrou e na missa de formação desses coroinhas, eu e minhas
+                    amigas passamos a ser acólitos e eramos escalados para auxiliar as pessoas que estavam começando. Eu servia de acólito
+                    até o começo desse ano e só parei porque me mudei para viçoso, aí na hora que eu vim eu deixei minha vestimenta para
+                    novos acólitos da comunidade. 
                 </p>
 
-                <p>Além disso, eu também ajudei na criação de um coral dos jovens na igreja. Ele começou porque não 
+                <p>
+                    Além disso, eu também ajudei na criação de um coral dos jovens na igreja. Ele começou porque não 
                     havia ninguém para tocar no grupo de oração mas acabou crescendo e passou a tocar também 
                     no grupo de jovens e na missa. 
                 </p>
