Ajustes de texto

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div id="perfil"></div>
 
                 <p>
-                    Olá, meu nome é Guilherme Augusto Rocha de Figueiredo, tenho 17 anos e atualmente estou
+                    Olá! Meu nome é Guilherme Augusto Rocha de Figueiredo, tenho 17 anos e atualmente estou
                     indo para o segundo período do curso de Ciência da Computação na UFV.
                 </p>
                 
@@ -101,17 +101,16 @@
             <div id="box-lazer" >
 
                 <p> 
-                    Meu passatempo favorito é ler, estou sempre com um livro ou kindle perto de mim, meus gêneros favoritos são fantasia
-                    e ficção-científica e eu leio cerca de uns 50-60 livros por ano. Eu participo de um discord de leituras da booktuber
-                    Tamirez(canal Resenhando Sonhos) onde fiz boas amizades. A gente faz leitura conjunta e comenta dos livros que estamos
-                    lendo e coisas aleatórias da vida.<br> Eu gosto muito de ler porque acho que na correria e confusão do dia a dia, nada consegue
-                    me transportar para outra realidade e me deixar tão imerso a ponto de esquecer a realidade ao meu redor como um bom livro.
+                    Meu passatempo favorito é ler, estou sempre com um livro ou kindle por perto, meus gêneros favoritos são fantasia
+                    e ficção-científica e leio cerca de uns 50 livros por ano. Participo de um discord de leituras da booktuber
+                    Tamirez(canal Resenhando Sonhos) onde fiz boas amizades. Fazemos leitura conjunta e comentamos os livros que estamos
+                    lendo, entre outras coisas.<br> Gosto muito de ler porque na correria do dia a dia, nada consegue me deixar tão imerso
+                    como um bom livro.
                 </p>
 
-                <p> Também sou meio cinéfilo, sempre estou de olho nos últimos lançamentos de filmes e séries e meus gêneros favoritos são sci-fi 
-                    e animação. Eu considero filmes e séries como uma versão mais leve de livros, mas que em muitos casos é bom, pois em um final
-                    de semana a noite por exemplo ou quando estou cansado, eu prefiro ver um filme ou série por ser um conteúdo mais fácil e rápido
-                    de ser consumido e mais tranquilo do que estar lendo sobre mundos épicos de fantasia. 
+                <p> Também sou um pouco cinéfilo, sempre estou de olho nos últimos lançamentos de filmes e séries e meus gêneros favoritos são sci-fi 
+                    e animação. Eu considero filmes e séries como uma versão mais leve de livros mas em um final
+                    de semana à noite por exemplo ou quando estou cansado, prefiro ver um filme ou série.
                 </p>
 
                 <p> Por fim, não sou uma pessoa muito de festas, mas adoro sair e passar tempo com meus amigos. Ir para um rodízio de pizzas ou encontrar 
@@ -143,22 +142,22 @@
             <div id="box-musica" >
 
                 <p> 
-                    Sou apaixonado por tudo que envolve música, desde cantar a tocar violão e dançar. A música é o meu lugar
-                    de conforto, quando eu estou feliz eu gosto de cantar pra expressar minha felicidade e quando estou
-                    triste eu canto para me animar. Se você me encontrar andando sozinho pela rua eu provavelmente vou estar 
+                    Sou apaixonado por tudo que envolve música, desde cantar, tocar violão e dançar. A música é o meu lugar
+                    de conforto, quando estou feliz, gosto de cantar pra expressar minha felicidade e quando estou
+                    triste eu canto para me animar. Se você me encontrar andando sozinho pela rua, provavelmente vou estar 
                     cantarolando alguma música no fundo da minha cabeça. 
                 </p>
 
                 <p> 
-                    Ademais, eu já fiz apresentações tocando e cantando na escola(a foto ao lado é de um dia de gincana 
-                    da escola) e eu participava do coral de jovens da minha igreja em que eu comecei apenas tocando violão
-                    mas depois comecei a cantar junto como uma forma de ser a voz masculina do coral. Gosto de realizar minhas
-                    tarefas escutando musica, e meu gosto musical é pop internacional e sofrência ao som de Adele.
+                    Ademais, já fiz apresentações tocando e cantando na escola(a foto ao lado é de um dia de gincana 
+                    da escola) e participava do coral de jovens da igreja em que eu comecei apenas tocando violão
+                    mas depois passei a cantar junto como uma forma de ser a voz masculina do coral. Gosto de realizar minhas
+                    tarefas escutando música e meu gosto musical é pop internacional e sofrência ao som de Adele.
                 </p>
 
                 <p> 
                     Por fim, a música consegue me trazer uma felicidade e leveza muito grande, por isso que todo dia em algum 
-                    momento eu vou estar escutando musica. Mesmo se for em um dia muito corrido, pelo menos um lo-fi 
+                    momento eu vou estar escutando música. Mesmo se for em um dia muito corrido, pelo menos um lo-fi 
                     eu tenho que escutar para acompanhar as minhas atividades. 
                 </p>
 
@@ -187,21 +186,21 @@
 
                 <p> 
                     Quando criança, gostava de desenhar. Minha vó tinha um caderno 
-                    e alguns lápis que ela deixava guardado pra mim e quando eu ia lá eu ficada
-                    desenhando os móveis e jarros de flor da casa dela .
+                    e alguns lápis que ela deixava guardado pra mim e quando eu ia lá, ficava
+                    desenhando os móveis e jarros de flores da casa dela .
                 </p>
 
                 <p> 
                     Fui crescendo e passei a desenhar os personagens de desenhos e filmes
-                    que eu gostava, como Steven Universe e Como Treinar o seu Dragão. Eu tive algumas
+                    que gostava, como Steven Universe e Como Treinar o seu Dragão. Eu tive algumas
                     "fases" de desenho, do jeito e estilo que usava pra desenhar, mas sempre
-                    gostei de usar lápis e lapís de cor. Já pensei em tentar aquarela mas gosto do
+                    gostei de usar lápis preto e lapís de cor. Já pensei em pintar com aquarela mas gosto do
                     controle que o lapís tem sobre a folha e pelo fato de não fazer tanta bagunça kkkk. 
                 </p>
 
                 <p>
                     Eu amava passar horas desenhando, simplesmente colocava o meu fone com uma playlist de músicas
-                    e passava a tarde inteira imerso em um desenho. Hoje em dia, infelizmete desenho muito raramente
+                    e passava a tarde inteira fazendo um desenho. Hoje em dia, infelizmete desenho muito raramente
                     devido ao fato que os estudos e afazeres requerem uma maior dedicação minha. Mas mesmo assim
                     a arte sempre terá um lugar especial em meu coração. 
                 </p>
@@ -233,23 +232,23 @@
 
                 <p>
                     Minha família sempre foi muito religiosa, por esse motivo, sempre estive muito presente
-                    no ambiente religioso. Eu participo da santa missa todos os domingos, já participei de coroações
+                    no ambiente religioso. Participo da santa missa todos os domingos, já participei de coroações
                     quando era pequeno, faço leituras nas missas e ia no grupo de oração as sextas
-                    que minha mãe cordenava e ao "terço dos homens" com meu pai e meu irmão as terças-feiras.
+                    que minha mãe cordenava e ao "terço dos homens" com meu pai e meu irmão às terças-feiras.
                 </p>
 
                 <p>
                     Fui o primeiro coroinha da minha cidade dos tempos atuais. Por muito tempo não havia ninguém,
-                    ai quando abriu um curso de preparação fui o primeiro e único a participar pelas primeiras três semanas,
-                    até que depois apareceram mais três meninas e servimos juntos por uns dois a três anos e viramos bons amigos. Depois disso, 
+                    ai quando abriu um curso de preparação fui o único a participar pelas primeiras três semanas,
+                    até que depois apareceram mais três meninas e servimos juntos por uns três anos e viramos bons amigos. Depois disso, 
                     abriu mais um curso de preparação em que muitas crianças entraram, e na missa de formação desses novos coroinhas eu e minhas
-                    amigas passamos a ser acólitos, e éramos escalados para auxiliar as pessoas que estavam começando. Só parei de servir como
+                    amigas passamos a ser acólitos e éramos escalados para auxiliar as pessoas que estavam começando. Só deixei de servir como
                     acólito porque me mudei para Viçosa para estudar. 
                 </p>
 
                 <p>
-                    Além disso, também ajudei na criação de um coral dos jovens na igreja. Ele começou porque não 
-                    havia ninguém para tocar no grupo de oração mas acabou crescendo e passou a fazer parte do ministério de música
+                    Além disso, ajudei na criação do coral de jovens da igreja. Ele começou porque não 
+                    havia ninguém para tocar no grupo de oração, mas acabou crescendo e passou a fazer parte do ministério de música
                     da santa missa. Divertia-mos muito nos encontros e ensaios e foi bom enquanto durou. 
                 </p>
 
